Update heading and fix cropped verified tooltip

--- a/static/sass/_snapcraft_details_heading.scss
+++ b/static/sass/_snapcraft_details_heading.scss
@@ -23,7 +23,6 @@
       flex-grow: 1;
       flex-shrink: 0;
       margin: 0;
-      overflow: hidden;
     }
 
     &__name {
